update on template ui
add user repo badges display

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Generate a clean README.md draft for any local repository."
 readme = "README.md"
 requires-python = ">=3.9"
-dependencies = []
+dependencies = ["pathspec>=0.12.1"]
 
 [project.scripts]
 pls-readme = "pls_readme.cli:main"
